--- a/index.html
+++ b/index.html
@@ -39,23 +39,23 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.com">
+                    <a href="https://ateramh.github.io">
                          <img src="assets/images/logo-184x184.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://ateramh.github.io/index.html">Atera</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://ateramh.github.io">Atera</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="what-is-atera.html"><span class="mbri-preview mbr-iconfont mbr-iconfont-btn"></span>What is Atera?</a>
+                    <a class="nav-link link text-white display-4" href="wia.html"><span class="mbri-preview mbr-iconfont mbr-iconfont-btn"></span>What is Atera?</a>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
