--- a/what-is-atera.html
+++ b/what-is-atera.html
@@ -38,11 +38,11 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://mobirise.com">
+                    <a href="https://ateramh.github.io/home.html">
                          <img src="assets/images/logo-184x184.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://ateramh.github.io/home.html">Atera</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://ateramh.github.io">Atera</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
 
     
 
@@ -67,7 +67,7 @@
                         WHAT IS ATERA?</h1>
                     <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-5">
                         This page shows what Atera is and what we do here!</p>
-                    <div class="mbr-section-btn align-center py-2"><a class="btn btn-md btn-secondary display-4" href="home.html">HOME</a></div>
+                    <div class="mbr-section-btn align-center py-2"><a class="btn btn-md btn-secondary display-4" href="https://ateramh.github.io">HOME</a></div>
 
                     <div class="icons-media-container mbr-white">
                         <div class="card col-12 col-md-6">
@@ -203,7 +203,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you, your suggestion is always appreciated</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="eRtSRGy28ugWbgFfRGKBjHsGE2yuMIqqlgSeXkQEIj3j7iBFdYJUm82bCr7BCtnzH2nHWws9nSYIEYJc++tar6hf4IDLhBmLPGBKDyuAGHdPadtPXGiq3dBIvx+u0e5T">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="46djkYH9peS+czRPAhIGs298Xlo5poQK1B1LQL1guq66n0IW6IQqCwIWHCdW8azBI9w3P9GUveqhr4ld51WxUkOJPKgQRv/I/op6PqgQ0M8JQsdTVXHYc+PfayUTodlf">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
