--- a/forums.html
+++ b/forums.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best website templates</a></section><section class="header1 cid-ri3ZdW8Bp5 mbr-parallax-background" id="header1-f">
+<section class="engine"><a href="https://mobirise.info/h">create a web page</a></section><section class="header1 cid-ri3ZdW8Bp5 mbr-parallax-background" id="header1-f">
 
     
 
@@ -77,13 +77,11 @@
 
 </section>
 
-<section class="mbr-section" id="witsec-custom-html-block-g" data-rv-view="27" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-section" id="witsec-custom-html-block-g" data-rv-view="13" style="background-color: rgb(255, 255, 255);">
  
  <div class="witsec-custom-html-container elements-content" style="padding-top: 0rem; padding-bottom: 0rem;">
      
-    <div class="mbr-section__container block" style="width: 100%;"><div id="wtEmbedCode"><script type="text/javascript" id="embedded_forum" src="https://aurorionz.discussion.community/js/mb/embed.js"></script>
-<noscript>&lt;a href="https://aurorionz.discussion.community/"&gt;Forum&lt;/a&gt;</noscript></div>
-</div>
+    <div class="mbr-section__container block" style="width: 100%;"><embed src="https://atera.forums.gg/" style="width:2000px; height: 1000px;"></div>
  </div>
 
 </section>
