--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/g">how to build a website for free</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -68,7 +68,7 @@
                     WELCOME TO ATERA</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">Make sure to stay safe, and make sure that you be civil around the website</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="wia.html">WHAT IS ATERA?</a> <a class="btn btn-md btn-primary display-4" href="what-is-atera.html#form1-b">SUGGESTIONS</a> <a class="btn btn-md btn-success display-4" href="forums.html">FORUMS</a></div>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="wia.html">WHAT IS ATERA?</a> <a class="btn btn-md btn-primary display-4" href="store.html">STORE</a> <a class="btn btn-md btn-success display-4" href="forums.html">FORUMS</a></div>
             </div>
         </div>
     </div>
