--- a/what-is-atera.html
+++ b/what-is-atera.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make a site</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="header12 cid-ri39Andi0Q mbr-fullscreen mbr-parallax-background" id="header12-4">
 
     
 
@@ -205,7 +205,7 @@
                 <div data-form-alert="" hidden="">
                         Thanks for filling out the form!
                 </div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UwfM7UlfmPaavGeHcli5GHFt60Uo4hT648fvnDD05b4dJXGfY7anEfW9GRChzQhelrgkiOOwiuoUCdwFhMPc1Q2uE5FzSuSedbeM80M/uB/zwaY5eKxkfxMk6KzivOwS">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="RzXAW/IWFRbOnGjqbRd3uejzPF6sp9Z/I1yNbHt5NaBshAlZ4wX1bboSksQsdRyH/RaLc1K9J4G8s+c66yp9b/vrjcdvtSwCRXMv1UBv7MfDnYT81vZTGzTIOCGWptDj">
                     <div class="mbr-subscribe input-group">
                         <input class="form-control" type="email" name="email" placeholder="Email" data-form-field="Email" required="" id="email-form3-d">
                         <span class="input-group-btn">
