--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -87,7 +87,7 @@
         <div class="media-container-row">
             <div class="title col-12 align-center">
                 <h2 class="pb-3 mbr-fonts-style display-2">
-                    OUR STAFF TEAM</h2>
+                    <br>OUR STAFF TEAM</h2>
                 <h3 class="mbr-section-subtitle mbr-light pb-3 mbr-fonts-style display-5">
                     These are the people working hard on the server</h3>
             </div>
