--- a/store.html
+++ b/store.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make a website for free</a></section><section class="header1 cid-rjuUJoabEf mbr-parallax-background" id="header1-b">
+<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="header1 cid-rjuUJoabEf mbr-parallax-background" id="header1-b">
 
     
 
@@ -76,7 +76,7 @@
 
 </section>
 
-<section class="mbr-section" id="witsec-custom-html-block-c" data-rv-view="276" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-section" id="witsec-custom-html-block-c" data-rv-view="49" style="background-color: rgb(255, 255, 255);">
  
  <div class="witsec-custom-html-container elements-content" style="padding-top:2rem; padding-bottom:2rem">
      
